FreeST/test/Programs/ValidTests/Modules/LongCycle/ModuleA.fst
module ModuleA where

import ModuleB

f : Int -> Int
f x = double x
