FreeST/test/Programs/InvalidTests/ParseErrors/missingArguments/missingArguments.fst

f : Int -> Int -> Int
f x y = x + y
f x   = x